Add missing (default) decorator.